platforms/falco/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falcosidekick
  namespace: falco
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"

spec:
  ingressClassName: nginx
  rules:
    - host: falco.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: falco-falcosidekick-ui
                port:
                  number: 2802
